Communication Inference with MoveMeant (#38)
This PR adds a --infer-comms flag to the choral epp command. The flag statically analyzes the user's source code and intelligently inserts communications to make the code compile; it does this with a new "relaxed" typing mode. The PR also includes LSP support for communication inference, a terser API for adding black box compiler tests, better debugging utilities, and a fix to projected code.

This PR was developed by Christian Grubbe Hviid Nesting (blesteea@gmail.com) with supervision and edits by Dan Plyukhin (dplyukhin@gmail.com)

---------

Co-authored-by: Christian Grubbe Hviid Nesting <blesteea@gmail.com>